--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.833</string>
-    <string name="version">Версія: 1.833</string>
+    <string name="version_code">1.834</string>
+    <string name="version">Версія: 1.834</string>
 
     <string name="app_name">Таксі Доставка</string>
 
@@ -159,7 +159,7 @@
     <string name="Zaporizhzhia">Запоріжжя</string>
     <string name="Cherkasy">Черкаси</string>
     <string name="OdessaTest">Одеса (Тест)</string>
-    <string name="disc_text">% к вартості</string>
+    <string name="disc_text">% +/- 💰🧾</string>
     <string name="email_sent">Повідомлення відправлено</string>
     <string name="send_like">Оцінити додаток</string>
     <string name="send_email_admin">Повідомити про проблему</string>
