--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,4 @@
 <resources>
-    <string name="application">PAS1</string>
-
-    <string name="version_code">1.839</string>
-    <string name="version">Версія: 1.839</string>
-
-    <string name="app_name">Таксі Доставка</string>
-
-
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Попутчик таксі Україна дешево</string>
-    <string name="nav_header_subtitle">Швидкі поїздки по містам України</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Налаштування</string>
 
     <string name="menu_maps">Мапа</string>
     <string name="menu_home">За адресою (Старе)</string>
@@ -530,4 +516,5 @@
     <string name="map_loading">Мапа ще завантажується...</string>
     <string name="cost_error">Помилка створення замовлення. Спробуйте змінити адресу або наберіть оператора</string>
     <string name="google_maps">Google Maps не встановлені</string>
+    <string name="sentNotifyMessage">Дозвольте застосунку надсилати Вам повідомлення</string>
 </resources>
