--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,20 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="application">PAS1</string>
-
-    <string name="version_code">1.839</string>
-    <string name="version">Version: 1.839</string>
-
-    <string name="app_name">Taxi Dostavka</string>
-
-
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Ukraine cheap taxi companion</string>
-    <string name="nav_header_subtitle">Quick trips around the cities of Ukraine</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
-
     <string name="menu_maps">Map</string>
     <string name="menu_home">At (Old)</string>
     <string name="menu_gallery">My routes</string>
@@ -527,4 +511,5 @@
     <string name="map_loading">The map is still loading...</string>
     <string name="cost_error">Error creating order. Try changing the address or dial the operator</string>
     <string name="google_maps">Google Maps not installed</string>
+    <string name="sentNotifyMessage">Allow the app to send you notifications</string>
 </resources>
